[gd_scene load_steps=21 format=4 uid="uid://57ql8loq6t8x"]

[ext_resource type="Script" path="res://rooms/start_menu.gd" id="1_iup7i"]
[ext_resource type="FontFile" uid="uid://cqqwligvnvq1" path="res://core components/alagard.ttf" id="2_byoew"]
[ext_resource type="Texture2D" uid="uid://b60w5lubcj66p" path="res://sprites/Dungeon Tile Set.png" id="2_xepqo"]
[ext_resource type="Shader" path="res://entities/energy_beam.gdshader" id="3_28gce"]
[ext_resource type="Shader" path="res://entities/god_rays.gdshader" id="4_b1drn"]
[ext_resource type="Shader" path="res://old/testShader.gdshader" id="4_ors1d"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_33f1l"]
texture = ExtResource("2_xepqo")
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
5:1/0 = 0
6:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
5:2/0 = 0
6:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
5:3/0 = 0
6:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
5:5/0 = 0
6:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
5:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
10:10/0 = 0
12:10/0 = 0
13:10/0 = 0
1:11/0 = 0
2:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
12:11/0 = 0
13:11/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
2:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0

[sub_resource type="TileSet" id="TileSet_53ocy"]
sources/0 = SubResource("TileSetAtlasSource_33f1l")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m5kxd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vddrm"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w10ti"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ljk6"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[sub_resource type="Animation" id="Animation_3735n"]
resource_name = "TITLE"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("ColorRect/VBoxContainer/Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 1.03333, 2.96667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.82606, 0.82606, 0.82606, 1), Color(1, 1, 1, 0), Color(0.827451, 0.827451, 0.827451, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/VBoxContainer/Label:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.06667, 2.03333, 3.96667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.47, 0.47, 0.47, 1), Color(1, 1, 1, 0), Color(0.47, 0.47, 0.47, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/VBoxContainer2/Label:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(2.03333, 3.06667, 5.03333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.281187, 0.281187, 0.281187, 1), Color(1, 1, 1, 0), Color(0.281187, 0.281187, 0.281187, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/VBoxContainer2/Label:theme_override_colors/font_shadow_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3.06667, 4.06667, 5.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.162066, 0.162066, 0.162066, 1), Color(1, 1, 1, 0), Color(0.48, 0.48, 0.48, 1)]
}

[sub_resource type="Animation" id="Animation_iqchv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/VBoxContainer/Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/VBoxContainer/Label:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.47, 0.47, 0.47, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/VBoxContainer2/Label:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.281187, 0.281187, 0.281187, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/VBoxContainer2/Label:theme_override_colors/font_shadow_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.162066, 0.162066, 0.162066, 1)]
}

[sub_resource type="Animation" id="Animation_estac"]
resource_name = "TITLE2"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/VBoxContainer/Label:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/VBoxContainer/Label:theme_override_colors/font_shadow_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.47, 0.47, 0.47, 0), Color(0.47, 0.47, 0.47, 1), Color(0.47, 0.47, 0.47, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/VBoxContainer2/Label:theme_override_colors/font_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2.03333, 4.03333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.28, 0.28, 0.28, 0), Color(0.28, 0.28, 0.28, 0), Color(0.281187, 0.281187, 0.281187, 1), Color(0.28, 0.28, 0.28, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/VBoxContainer2/Label:theme_override_colors/font_shadow_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333, 2.03333, 3.03333, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.47, 0.47, 0.47, 0), Color(0.22, 0.22, 0.22, 0), Color(0.151276, 0.151276, 0.151276, 1), Color(0.129558, 0.129558, 0.129558, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m6hor"]
_data = {
"RESET": SubResource("Animation_iqchv"),
"TITLE": SubResource("Animation_3735n"),
"TITLE2": SubResource("Animation_estac")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ln1pj"]
shader = ExtResource("3_28gce")
shader_parameter/beams = 1
shader_parameter/energy = 1.0
shader_parameter/roughness = 1
shader_parameter/frequency = 5
shader_parameter/speed = 4.25
shader_parameter/thickness = 0.016
shader_parameter/outline_thickness = 0.03
shader_parameter/beam_difference = 0.1
shader_parameter/glow = 0.0
shader_parameter/outline_glow = 0.0
shader_parameter/color = Color(0.8, 0.2, 0.8, 0.9)
shader_parameter/outline_color = Color(0.8, 0.2, 0.8, 0.8)
shader_parameter/progress = 1.0
shader_parameter/y_offset = 0.0
shader_parameter/fixed_edge_size = 0.05
shader_parameter/noise_scale = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d538v"]
shader = ExtResource("4_b1drn")
shader_parameter/angle = 0.2
shader_parameter/position = 0.2
shader_parameter/spread = 0.5
shader_parameter/cutoff = 0.01
shader_parameter/falloff = 0.4
shader_parameter/edge_fade = 0.25
shader_parameter/speed = 5.0
shader_parameter/ray1_density = 8.0
shader_parameter/ray2_density = 30.0
shader_parameter/ray2_intensity = 0.3
shader_parameter/color = Color(0.5, 0.25, 0.5, 0.4)
shader_parameter/hdr = false
shader_parameter/seed = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jx388"]
shader = ExtResource("4_ors1d")
shader_parameter/range = 0.05
shader_parameter/noiseQuality = 250.0
shader_parameter/noiseIntensity = 0.0088
shader_parameter/offsetIntensity = 0.03
shader_parameter/colorOffsetIntensity = 1.3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_treyn"]
width = 750

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iup7i")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="ColorRect"]
tile_map_data = PackedByteArray("AAAAAAAAAAADAAIAAAAAAAEAAAADAAIAAAABAAEAAAACAAIAAAABAAIAAAAMAAIAAAACAAIAAAACAAIAAAAAAAIAAAADAAIAAAAAAAMAAAADAAIAAAAAAAQAAAADAAIAAAAAAAUAAAADAAIAAAAAAAYAAAADAAIAAAAAAAcAAAADAAIAAAAAAAgAAAADAAIAAAAAAAkAAAADAAIAAAAAAAoAAAADAAIAAAABAAAAAAACAAIAAAABAAMAAAACAAIAAAABAAQAAAACAAIAAAABAAUAAAACAAIAAAABAAYAAAACAAIAAAABAAcAAAACAAIAAAABAAgAAAACAAIAAAABAAkAAAALAAcAAAABAAoAAAACAAIAAAACAAAAAAAKAAQAAAACAAEAAAACAAIAAAACAAMAAAACAAIAAAACAAQAAAACAAIAAAACAAUAAAACAAIAAAACAAYAAAALAAYAAAACAAcAAAACAAIAAAACAAgAAAACAAIAAAACAAkAAAACAAIAAAACAAoAAAACAAIAAAADAAAAAAALAAQAAAADAAEAAAACAAIAAAADAAIAAAAIAAEAAAADAAMAAAAIAAIAAAADAAQAAAACAAIAAAADAAUAAAACAAIAAAADAAYAAAACAAIAAAADAAcAAAACAAIAAAADAAgAAAACAAIAAAADAAkAAAACAAIAAAADAAoAAAAHAAcAAAAEAAAAAAACAAIAAAAEAAEAAAACAAIAAAAEAAIAAAAJAAEAAAAEAAMAAAALAAYAAAAEAAQAAAACAAIAAAAEAAUAAAACAAIAAAAEAAYAAAACAAIAAAAEAAcAAAAMAAIAAAAEAAgAAAACAAIAAAAEAAkAAAACAAIAAAAEAAoAAAACAAIAAAAFAAAAAAACAAIAAAAFAAEAAAACAAIAAAAFAAIAAAAJAAEAAAAFAAMAAAAJAAEAAAAFAAQAAAACAAIAAAAFAAUAAAACAAIAAAAFAAYAAAACAAIAAAAFAAcAAAACAAIAAAAFAAgAAAACAAIAAAAFAAkAAAACAAIAAAAFAAoAAAACAAIAAAAGAAAAAAACAAIAAAAGAAEAAAACAAIAAAAGAAIAAAAJAAIAAAAGAAMAAAAIAAMAAAAGAAQAAAACAAIAAAAGAAUAAAAMAAIAAAAGAAYAAAACAAIAAAAGAAcAAAACAAIAAAAGAAgAAAACAAIAAAAGAAkAAAACAAIAAAAGAAoAAAACAAIAAAAHAAAAAAAKAAcAAAAHAAEAAAACAAIAAAAHAAIAAAAJAAIAAAAHAAMAAAAJAAIAAAAHAAQAAAACAAIAAAAHAAUAAAACAAIAAAAHAAYAAAACAAIAAAAHAAcAAAACAAIAAAAHAAgAAAACAAIAAAAHAAkAAAACAAIAAAAHAAoAAAACAAIAAAAIAAAAAAACAAIAAAAIAAEAAAACAAIAAAAIAAIAAAANAAEAAAAIAAMAAAAJAAUAAAAIAAQAAAACAAIAAAAIAAUAAAACAAIAAAAIAAYAAAACAAIAAAAIAAcAAAACAAIAAAAIAAgAAAACAAIAAAAIAAkAAAAMAAIAAAAIAAoAAAACAAIAAAAJAAAAAAACAAIAAAAJAAEAAAACAAIAAAAJAAIAAAANAAEAAAAJAAMAAAAIAAQAAAAJAAQAAAACAAIAAAAJAAUAAAACAAIAAAAJAAYAAAACAAIAAAAJAAcAAAACAAIAAAAJAAgAAAACAAIAAAAJAAkAAAACAAIAAAAJAAoAAAACAAIAAAAKAAAAAAACAAIAAAAKAAEAAAACAAIAAAAKAAIAAAAIAAQAAAAKAAMAAAAJAAUAAAAKAAQAAAACAAIAAAAKAAUAAAACAAIAAAAKAAYAAAACAAIAAAAKAAcAAAACAAIAAAAKAAgAAAACAAIAAAAKAAkAAAACAAIAAAAKAAoAAAACAAIAAAALAAAAAAACAAIAAAALAAEAAAACAAIAAAALAAIAAAACAAIAAAALAAMAAAACAAIAAAALAAQAAAACAAIAAAALAAUAAAACAAIAAAALAAYAAAACAAIAAAALAAcAAAACAAIAAAALAAgAAAACAAIAAAALAAkAAAACAAIAAAALAAoAAAACAAIAAAAMAAAAAAACAAIAAAAMAAEAAAACAAIAAAAMAAIAAAAJAAMAAAAMAAMAAAAIAAEAAAAMAAQAAAACAAIAAAAMAAUAAAACAAIAAAAMAAYAAAACAAIAAAAMAAcAAAACAAIAAAAMAAgAAAACAAIAAAAMAAkAAAACAAIAAAAMAAoAAAACAAIAAAANAAAAAAACAAIAAAANAAEAAAACAAIAAAANAAIAAAAJAAMAAAANAAMAAAAJAAUAAAANAAQAAAACAAIAAAANAAUAAAACAAIAAAANAAYAAAACAAIAAAANAAcAAAACAAIAAAANAAgAAAACAAIAAAANAAkAAAACAAIAAAANAAoAAAACAAIAAAAOAAAAAAACAAIAAAAOAAEAAAACAAIAAAAOAAIAAAAJAAIAAAAOAAMAAAAJAAIAAAAOAAQAAAACAAIAAAAOAAUAAAACAAIAAAAOAAYAAAACAAIAAAAOAAcAAAAIAAcAAAAOAAgAAAACAAIAAAAOAAkAAAACAAIAAAAOAAoAAAACAAIAAAAPAAAAAAACAAIAAAAPAAEAAAACAAIAAAAPAAIAAAAJAAUAAAAPAAMAAAAJAAUAAAAPAAQAAAACAAIAAAAPAAUAAAACAAIAAAAPAAYAAAACAAIAAAAPAAcAAAACAAIAAAAPAAgAAAACAAIAAAAPAAkAAAACAAIAAAAPAAoAAAAKAAMAAAAQAAEAAAAMAAUAAAAQAAIAAAAJAAUAAAAQAAMAAAAJAAMAAAAQAAQAAAACAAIAAAAQAAUAAAACAAIAAAAQAAYAAAAMAAIAAAAQAAcAAAACAAIAAAAQAAgAAAACAAIAAAAQAAkAAAACAAIAAAAQAAoAAAALAAMAAAARAAEAAAACAAIAAAARAAIAAAACAAIAAAARAAMAAAACAAIAAAARAAQAAAACAAIAAAARAAUAAAACAAIAAAARAAYAAAACAAIAAAARAAcAAAACAAIAAAARAAgAAAACAAIAAAARAAkAAAACAAIAAAARAAoAAAAMAAMAAAASAAEAAAACAAIAAAASAAIAAAACAAIAAAASAAMAAAAMAAUAAAASAAQAAAACAAIAAAASAAUAAAACAAIAAAASAAYAAAANAAMAAAASAAcAAAACAAIAAAASAAgAAAAHAAcAAAASAAkAAAACAAIAAAASAAoAAAACAAIAAAATAAAAAAABAAIAAAATAAEAAAABAAIAAAATAAIAAAABAAIAAAATAAMAAAABAAIAAAATAAQAAAABAAIAAAATAAUAAAABAAIAAAATAAYAAAABAAIAAAATAAcAAAABAAIAAAATAAgAAAABAAIAAAATAAkAAAABAAIAAAATAAoAAAABAAIAAAASAAAAAAALAA4AAAARAAAAAAAKAA4AAAAAAAsAAAADAAIAAAATAAsAAAABAAIAAAABAAsAAAACAAIAAAACAAsAAAACAAIAAAADAAsAAAACAAIAAAAEAAsAAAACAAIAAAAFAAsAAAACAAIAAAAGAAsAAAACAAIAAAAHAAsAAAACAAIAAAAIAAsAAAACAAIAAAAJAAsAAAACAAIAAAAKAAsAAAACAAIAAAALAAsAAAACAAIAAAAMAAsAAAAKAAcAAAANAAsAAAACAAIAAAAOAAsAAAACAAIAAAAPAAsAAAAKAAQAAAAQAAsAAAALAAQAAAARAAsAAAACAAIAAAASAAsAAAACAAIAAAA=")
tile_set = SubResource("TileSet_53ocy")

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
z_index = 1
layout_mode = 0
offset_top = 22.0
offset_right = 320.0
offset_bottom = 179.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.47, 0.47, 0.47, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = -5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_byoew")
theme_override_font_sizes/font_size = 40
text = "TOWER RAT"
horizontal_alignment = 1

[node name="begin_Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_byoew")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5kxd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vddrm")
text = "Begin"

[node name="options_Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_byoew")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5kxd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_w10ti")
text = "Options"

[node name="quit_Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_byoew")
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_m5kxd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8ljk6")
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect"]
layout_mode = 0
offset_top = 13.0
offset_right = 320.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="ColorRect/VBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.281187, 0.281187, 0.281187, 1)
theme_override_colors/font_shadow_color = Color(0.162066, 0.162066, 0.162066, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = -5
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("2_byoew")
theme_override_font_sizes/font_size = 39
text = "TOWER RAT"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m6hor")
}
autoplay = "TITLE2"
speed_scale = 3.0

[node name="beam" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_ln1pj")
layout_mode = 0
offset_right = 320.0
offset_bottom = 151.0

[node name="godrays" type="ColorRect" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_d538v")
layout_mode = 0
offset_left = -18.0
offset_top = -13.0
offset_right = 355.0
offset_bottom = 234.0
color = Color(1, 1, 1, 0.113725)

[node name="distortion" type="TextureRect" parent="."]
z_index = 2
material = SubResource("ShaderMaterial_jx388")
layout_mode = 0
offset_top = -120.0
offset_right = 615.0
offset_bottom = 392.0
scale = Vector2(0.520001, 0.4)
texture = SubResource("NoiseTexture2D_treyn")
stretch_mode = 4

[connection signal="focus_entered" from="ColorRect/VBoxContainer/begin_Button" to="." method="_on_begin_button_focus_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/begin_Button" to="." method="_on_begin_button_pressed"]
[connection signal="focus_entered" from="ColorRect/VBoxContainer/options_Button" to="." method="_on_options_button_focus_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/options_Button" to="." method="_on_options_button_pressed"]
[connection signal="focus_entered" from="ColorRect/VBoxContainer/quit_Button" to="." method="_on_quit_button_focus_entered"]
[connection signal="pressed" from="ColorRect/VBoxContainer/quit_Button" to="." method="_on_quit_button_pressed"]
